// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl > Snapshot > With multiple field 1`] = `
.c6 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c6::-webkit-input-placeholder {
  color: #00000066;
}

.c6::-moz-placeholder {
  color: #00000066;
}

.c6:-ms-input-placeholder {
  color: #00000066;
}

.c6::placeholder {
  color: #00000066;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FFFFFF;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  box-shadow: 0 0 0 3px #F4800B4D, inset 0 0 0 1px #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c0 {
  position: relative;
}

.c1 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c8 {
  padding: 0 2px;
  margin-top: 4px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 6px;
}

.c2 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: bold;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c9 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c3 {
  display: block;
  text-align: left;
}

.c10 {
  display: block;
  text-align: left;
}

@supports not(gap:6px) {
  .c4 {
    margin-top: -6px;
    margin-left: -6px;
  }

  .c4 > * {
    margin-top: 6px;
    margin-left: 6px;
  }
}

<div>
  <div
    class="c0"
    data-testid="bezier-react-form-control"
  >
    <div
      class="c0 c1"
    >
      <label
        class="c2 c3"
        color="txt-black-darkest"
        data-testid="bezier-react-form-label"
        id="form-label"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="c4"
      data-testid="bezier-react-form-group"
      direction="column"
      id="form-group"
      role="group"
    >
      <div
        class="c0"
        data-testid="bezier-react-form-control"
      >
        <div
          class="c0 c1"
        >
          <label
            class="c2 c3"
            color="txt-black-darkest"
            data-testid="bezier-react-form-label"
            for="field-1"
            id="field-1-label"
          >
            First Inner Label
          </label>
        </div>
        <div
          class="c5"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            autocomplete="off"
            class="c6"
            id="field-1"
            size="36"
            value=""
          />
        </div>
      </div>
      <div
        class="c0"
        data-testid="bezier-react-form-control"
      >
        <div
          class="c0 c1"
        >
          <label
            class="c2 c3"
            color="txt-black-darkest"
            data-testid="bezier-react-form-label"
            for="field-2"
            id="field-2-label"
          >
            Second Inner Label
          </label>
        </div>
        <div
          class="c7"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="c6"
            id="field-2"
            size="36"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c0 c8"
    >
      <p
        class="c9 c10"
        color="txt-black-dark"
        data-testid="bezier-react-form-helper-text"
        id="form-help-text"
      >
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With multiple field and left label position 1`] = `
.c9 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c9::-webkit-input-placeholder {
  color: #00000066;
}

.c9::-moz-placeholder {
  color: #00000066;
}

.c9:-ms-input-placeholder {
  color: #00000066;
}

.c9::placeholder {
  color: #00000066;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c10 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FFFFFF;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  box-shadow: 0 0 0 3px #F4800B4D, inset 0 0 0 1px #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c0 {
  position: relative;
}

.c6 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c11 {
  padding: 0 2px;
  margin-top: 4px;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: minmax(150px,auto) 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  height: 36px;
}

.c12 {
  grid-row: 2 / 2;
  grid-column: 2;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 6px;
}

.c3 {
  font-size: 1.4rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: bold;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c7 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: bold;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c13 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c4 {
  display: block;
  text-align: left;
}

.c14 {
  display: block;
  text-align: left;
}

@supports not(gap:6px) {
  .c5 {
    margin-top: -6px;
    margin-left: -6px;
  }

  .c5 > * {
    margin-top: 6px;
    margin-left: 6px;
  }
}

<div>
  <div
    class="c0 c1"
    data-testid="bezier-react-form-control"
  >
    <div
      class="c0 c2"
      height="36"
    >
      <label
        class="c3 c4"
        color="txt-black-darkest"
        data-testid="bezier-react-form-label"
        id="form-label"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="c5"
      data-testid="bezier-react-form-group"
      direction="column"
      id="form-group"
      role="group"
    >
      <div
        class="c0"
        data-testid="bezier-react-form-control"
      >
        <div
          class="c0 c6"
        >
          <label
            class="c7 c4"
            color="txt-black-darkest"
            data-testid="bezier-react-form-label"
            for="field-3"
            id="field-3-label"
          >
            First Inner Label
          </label>
        </div>
        <div
          class="c8"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            autocomplete="off"
            class="c9"
            id="field-3"
            size="36"
            value=""
          />
        </div>
      </div>
      <div
        class="c0"
        data-testid="bezier-react-form-control"
      >
        <div
          class="c0 c6"
        >
          <label
            class="c7 c4"
            color="txt-black-darkest"
            data-testid="bezier-react-form-label"
            for="field-4"
            id="field-4-label"
          >
            Second Inner Label
          </label>
        </div>
        <div
          class="c10"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="c9"
            id="field-4"
            size="36"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c0 c11 c12"
    >
      <p
        class="c13 c14"
        color="txt-black-dark"
        data-testid="bezier-react-form-helper-text"
        id="form-help-text"
      >
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field 1`] = `
.c5 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c5::-webkit-input-placeholder {
  color: #00000066;
}

.c5::-moz-placeholder {
  color: #00000066;
}

.c5:-ms-input-placeholder {
  color: #00000066;
}

.c5::placeholder {
  color: #00000066;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c0 {
  position: relative;
}

.c1 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c6 {
  padding: 0 2px;
  margin-top: 4px;
}

.c2 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: bold;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c7 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c3 {
  display: block;
  text-align: left;
}

.c8 {
  display: block;
  text-align: left;
}

<div
  class="c0"
  data-testid="bezier-react-form-control"
>
  <div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      color="txt-black-darkest"
      data-testid="bezier-react-form-label"
      for="form"
      id="form-label"
    >
      Label
    </label>
  </div>
  <div
    class="c4"
    data-testid="bezier-react-text-input"
    size="36"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="c5"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="c0 c6"
  >
    <p
      class="c7 c8"
      color="txt-black-dark"
      data-testid="bezier-react-form-helper-text"
      id="form-help-text"
    >
      Description
    </p>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field and left label position 1`] = `
.c6 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c6::-webkit-input-placeholder {
  color: #00000066;
}

.c6::-moz-placeholder {
  color: #00000066;
}

.c6:-ms-input-placeholder {
  color: #00000066;
}

.c6::placeholder {
  color: #00000066;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c0 {
  position: relative;
}

.c7 {
  padding: 0 2px;
  margin-top: 4px;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: minmax(150px,auto) 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  height: 36px;
}

.c8 {
  grid-row: 2 / 2;
  grid-column: 2;
}

.c3 {
  font-size: 1.4rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: bold;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c9 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c4 {
  display: block;
  text-align: left;
}

.c10 {
  display: block;
  text-align: left;
}

<div
  class="c0 c1"
  data-testid="bezier-react-form-control"
>
  <div
    class="c0 c2"
    height="36"
  >
    <label
      class="c3 c4"
      color="txt-black-darkest"
      data-testid="bezier-react-form-label"
      for="form"
      id="form-label"
    >
      Label
    </label>
  </div>
  <div
    class="c5"
    data-testid="bezier-react-text-input"
    size="36"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="c6"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="c0 c7 c8"
  >
    <p
      class="c9 c10"
      color="txt-black-dark"
      data-testid="bezier-react-form-helper-text"
      id="form-help-text"
    >
      Description
    </p>
  </div>
</div>
`;
